--- a/static/reset.css
+++ b/static/reset.css
@@ -15,12 +15,14 @@
     /* Tipografía */
     --tipo-principal: Helvetica, Arial, sans-serif;
     --tipo-secundaria: Verdana;
+    --main-font-color: #ececec;
 }
 
 /* Las adaptamos al modo oscuro */
 @media (prefers-color-scheme: dark) {
     :root {
         --negro: #ececec;
+        --main-font-color: #393939;
     }
 }
 /* Opcional */
