--- a/static/styles.css
+++ b/static/styles.css
@@ -3,18 +3,27 @@
 title {
     display:none;
 }
+
+script {
+    display:none;
+}
+
 /* Establecer un estilo básico para el body */
+html, body {
+    height: 100%; /* Asegura que el body ocupe toda la altura de la ventana */
+    margin: 0; /* Elimina el margen por defecto */
+}
+
 body {
-    display: flex; /* Usar flexbox para centrar el contenido */
-    flex-direction: column; /* Apilar elementos verticalmente */
-    justify-content: center; /* Centrar verticalmente */
-    align-items: center; /* Centrar horizontalmente */
-    min-height: 100vh; /* Asegurarse de que ocupe toda la altura de la ventana */
     font-family: var(--tipo-principal); /* Usar la tipografía definida en el reset */
     color: var(--main-font-color); /* Usar el color definido en el reset */
     background-color: #ffffff; /* Color de fondo */
-    padding: 0; /* Sin espacio alrededor del contenido */
-    margin: 0; /* Sin margen por defecto */
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column; /* Organiza los elementos en una columna */
+    min-height: 100vh; /* Asegura que la altura mínima sea igual a la altura de la ventana */
 }
 
 header {
@@ -23,9 +32,17 @@ header {
     align-items: center; /* Centrar verticalmente */
     width: 100%; /* Asegúrate de que el header ocupe to do el ancho */
     background-color: #222; /* Color de fondo */
-    padding: 10px; /* Espacio interno */
+    padding: 1em; /* Espacio interno */
     border-bottom: 1px solid #ccc; /* Borde inferior */
     z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+}
+
+#content {
+    flex: 1; /* Permite que el contenido ocupe el espacio restante */
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido es demasiado largo */
+    padding: 20px; /* Espaciado interno */
+    justify-content: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente (opcional) */
 }
 
 .language-selector {
@@ -110,6 +127,7 @@ header {
     width: 100%; /* Ancho completo en pantallas pequeñas */
     flex: 1; /* Permitir que el contenedor crezca y ocupe el espacio disponible */
     padding: 1em; /* Espacio interno para el contenedor */
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido es demasiado largo */
 }
 
 /* Estilo para el encabezado */
@@ -128,7 +146,7 @@ form {
 }
 
 /* Estilo para los inputs y botones */
-input[type="file"], button {
+button {
     margin: 10px 0; /* Espacio entre los elementos */
     padding: 10px; /* Espacio interno */
     border: 1px solid #ccc; /* Borde */
@@ -138,21 +156,47 @@ input[type="file"], button {
     width: 100%; /* Ancho completo */
 }
 
-/* Estilo para el label que actúa como botón de carga */
-.file-upload-label {
-    display: inline-block; /* Permitir que el label se comporte como un botón */
-    padding: 1em 1.5em; /* Espacio interno */
-    border: 1px solid #ccc; /* Borde */
-    border-radius: 4px; /* Bordes redondeados */
-    background-color: var(--main-font-color); /* Color de fondo */
-    color: #ffffff; /* Color del texto */
-    font-size: 16px; /* Tamaño de fuente */
-    cursor: pointer; /* Cambiar el cursor al pasar sobre el botón */
-    transition: background-color 0.3s; /* Transición suave para el hover */
+.custum-file-upload {
+    height: 200px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    gap: 20px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border: 2px dashed #cacaca;
+    background-color: rgba(255, 255, 255, 1);
+    padding: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0px 48px 35px -48px rgba(0,0,0,0.1);
 }
 
-.file-upload-label:hover {
-    background-color: #555; /* Color de fondo al pasar el mouse */
+.custum-file-upload .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.custum-file-upload .icon svg {
+    height: 80px;
+    fill: rgba(75, 85, 99, 1);
+}
+
+.custum-file-upload .text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.custum-file-upload .text span {
+    font-weight: 400;
+    color: rgba(75, 85, 99, 1);
+}
+
+.custum-file-upload input {
+    display: none;
 }
 
 /* Estilo para el botón */
@@ -178,7 +222,7 @@ footer {
     width: 100%; /* Asegúrate de que el footer ocupe to do el ancho */
     background-color: #222; /* Color de fondo */
     text-align: center; /* Centrar el texto */
-    padding: 10px; /* Espacio interno */
+    padding: 2em; /* Espacio interno */
     border-top: 1px solid #ccc; /* Borde superior */
     color: #fff;
 }
