--- a/app/templates/base_en.html
+++ b/app/templates/base_en.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Application{% endblock %}</title>
-    <link rel="stylesheet" href="/static/reset.css">
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/app/static/reset.css">
+    <link rel="stylesheet" href="/app/static/styles.css">
     {% block head %}{% endblock %}
 </head>
 <body>
