--- a/app/templates/base_es.html
+++ b/app/templates/base_es.html
@@ -12,13 +12,13 @@
 <div class="wrapper">
     <header>
         <div class="toggle-switch">
-            <label class="switch-label">
+            <label class="switch-label" aria-label="Cambio de tema">
                 <input type="checkbox" class="checkbox" id="theme-toggle">
                 <span class="slider"></span>
             </label>
         </div>
         <div class="language-selector">
-            <label for="language">Idioma:</label>
+            <label for="language" aria-label="Selecciona el idioma">Idioma:</label>
             <select id="language" name="language">
                 <option value="es" selected>Español</option>
                 <option value="en">English</option>
@@ -29,6 +29,7 @@
     <footer>
         <div>
             <p>Este es solo un proyecto de prueba para mostrar en mi portafolio.</p>
+            <p>&copy; 2024 Adrian Rivera Trujillo. Todos los derechos reservados.</p>
         </div>
     </footer>
     {% block scripts %}{% endblock %}
