--- a/app/templates/upload_en.html
+++ b/app/templates/upload_en.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="container">
-    <header>
-        <h1>Upload image to the OCR</h1>
-    </header>
+
+    <h1>Upload image to the OCR</h1>
+
     <main>
         <section>
             <form action="/v1/ocr" method="post" enctype="multipart/form-data" role="form">
@@ -71,4 +71,51 @@
     </script>
     {% endblock %}
 </div>
+<style>
+    style{
+        display:none;
+    }
+    .custom-file-upload {
+        height: 200px;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
+        gap: 20px;
+        cursor: pointer;
+        align-items: center;
+        justify-content: center;
+        border: 2px dashed #cacaca;
+        background-color: rgba(255, 255, 255, 1);
+        padding: 1.5rem;
+        border-radius: 10px;
+        box-shadow: 0px 48px 35px -48px rgba(0,0,0,0.1);
+    }
+
+    .custom-file-upload .icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .custom-file-upload .icon svg {
+        height: 80px;
+        fill: rgba(75, 85, 99, 1);
+    }
+
+    .custom-file-upload .text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .custom-file-upload .text span {
+        font-weight: 400;
+        color: rgba(75, 85, 99, 1);
+    }
+
+    .custom-file-upload input {
+        display: none;
+    }
+</style>
 {% endblock %}
